[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://Player_Character/Dash/GD_Dash.gd" id="1_ks0hi"]

[sub_resource type="Gradient" id="Gradient_o5sgj"]
offsets = PackedFloat32Array(0, 0.979167)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_w88p4"]
gradient = SubResource("Gradient_o5sgj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_t73e5"]
lifetime_randomness = 0.7
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
angle_min = -180.0
angle_max = 180.0
color_ramp = SubResource("GradientTexture1D_w88p4")

[node name="Dash" type="Node3D"]
script = ExtResource("1_ks0hi")

[node name="dash_timer" type="Timer" parent="."]
one_shot = true

[node name="ghost_timer" type="Timer" parent="."]
wait_time = 0.025

[node name="DustTrail" type="GPUParticles3D" parent="."]
emitting = false
amount = 10
one_shot = true
explosiveness = 0.8
process_material = SubResource("ParticleProcessMaterial_t73e5")

[node name="DustBurst" type="GPUParticles3D" parent="."]
